# RDMC

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  LICENSE.md  Makefile  README.md  environment.yml  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  ruff.toml  search.html  searchindex.js  setup.py  setup.sh
.conda/release/: meta.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_docs.yaml  ci.yaml  conda_build.yaml  pypi_build.yaml
_sources/: index.rst.txt
_sources/reference/: rdmc.rst.txt  reaction.rst.txt
_static/: documentation_options.js
conformer_exps/ts_conf_gen/: generate_ts_confs.py  generate_ts_confs_LLsub.py  misc_data_prep.ipynb  optimize_ts_confs.py  submit_LLsub.sh  submit_job_array.sh  val_ids_low_barrier.pkl  val_rxns.csv  val_rxns_low_barrier.csv  verify_ts_confs.py
docs/source/: conf.py  index.rst  license.rst  rdmc.external.rst  rdmc.external.ts_gen.rst  rdmc.external.xyz2mol.rst  rdmc.rdk.rst  rdmc.rst
ipython/: A Demo of XYZ and RDKitMol.ipynb  Analyze composite jobs.ipynb  Analyze opt&freq&composite jobs.ipynb  Analyze scan&irc jobs.ipynb  Conformer Generation Workflow.ipynb  Forcefield Examples.ipynb  Gaussian job analyzer.ipynb  Generate Atommapped SMILES.ipynb  Handle molecule with XYZ.ipynb  Match RMG Reaction SMILES.ipynb  QM Parser Demo 1 - Built-in Parser.ipynb  QM Parser Demo 2 - General Parser.ipynb  QM Parser Demo.ipynb  RDKit + RMG + TS-GCN.ipynb  RDKit + RMG + TS_GEN.ipynb  RDKitMol + FF.ipynb  RDKitMol + ForceField.ipynb  TS Conformer Generation[WIP].ipynb  TS-GCN+RDMC_v2.ipynb  TS-GCN+RDMC_v4.ipynb  TS-GCN+RDMC_v5.ipynb  Viewer Examples.ipynb  XYZ + RDKitMol.ipynb  XYZ and RDKitMol.ipynb  develop_ts_screener.ipynb  stochastic_conf_pipeline_LP.ipynb  ts_generation_pipeline_LP.ipynb  xyz_to_rdkitmol.ipynb
ipython/data/: irc.out  scan.out  ts-cbsqb3.out  well-cbsqb3.out
ipython/notebooks_to_clean/: TS Conformer Generation Workflow.ipynb  TS-GCN+RDMC_v1.ipynb  TS-GCN+RDMC_v3.ipynb  TS-GCN+RDMC_v5.ipynb  Well Conformer Generation[WIP].ipynb  develop_ts_screener.ipynb  ts_generation_pipeline_LP.ipynb
rdmc/: __init__.py  conf.py  featurizer.py  fix.py  forcefield.py  geom.py  mapper.py  mol.py  mol_compare.py  plotter.py  reaction.py  rxn_compare.py  ts.py  utils.py  view.py
rdmc/conformer_generation/: README.md  __init__.py  acs.py  align.py  decoder.py  embedders.py  generators.py  greedymin.py  metrics.py  optimizers.py  pruners.py  sampler.py  solvation.py  task.py  ts_generators.py  ts_guessers.py  ts_optimizers.py  ts_verifiers.py  utils.py  verifiers.py
rdmc/math/: curvefit.py
rdmc/mathlib/: __init__.py  curvefit.py  geom.py  greedymin.py
rdmc/mol/: __init__.py  attribute.py  compare.py  conf.py  helper.py  ops.py  rdkitmol.py  transform.py
rdmc/new_mol/: __init__.py  attribute.py  compare.py  conf.py  helper.py  ops.py  rdkitmol.py  transform.py
rdmc/rdtools/: atom.py  atommap.py  bond.py  compare.py  conf.py  dist.py  mol.py  obabel.py  torsion.py
rdmc/resonance/: __init__.py  base.py  exceptions.py  (+10 more)
rdtools/: __init__.py  atom.py  atommap.py  bond.py  compare.py  conf.py  dist.py  element.py  featurizer.py  mathlib.py  mol.py  obabel.py  torsion.py  utils.py
reference/: cite.html  conf.html  credits.html  fix.html  forcefield.html  license.html  mol.html  mol_compare.html  rdmc.html  reaction.html  ts.html  utils.html  view.html
test/: test_featurizer.py  test_fingerprint.py  test_fix.py  test_mol.py  test_reaction.py  test_resonance.py  test_ts.py  test_utils.py
(+412 files in other folders)
